[gd_scene load_steps=7 format=3 uid="uid://co1wapxytxdw"]

[ext_resource type="Script" path="res://Scripts/enemy/quasar.gd" id="1_hso0o"]
[ext_resource type="Texture2D" uid="uid://m1ulxsej3gw7" path="res://Assets/Sprites/enemies/Onyx_demon.png" id="2_1uttc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d0o6i"]
atlas = ExtResource("2_1uttc")
region = Rect2(368, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_rj8gv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0o6i")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wi2nf"]
radius = 2.0
height = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pf0lx"]
radius = 4.12311

[node name="quasar" type="Area2D"]
z_index = 1
collision_layer = 2
collision_mask = 3
script = ExtResource("1_hso0o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_rj8gv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wi2nf")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pf0lx")

[node name="immunity_timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="immunity_timer" to="." method="_on_immunity_timer_timeout"]
